--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           <div>
             <img src="./switzright.png" alt="" />
             <h4>Switzerland</h4>
-            <h3>When i think I want Peace,
-              i only think about This place.....
+            <h3>Amezing Location , To spend
+               Your Time With Your Family and Lifelines......
             </h3>
           </div>
         </div>
@@ -52,7 +52,7 @@
          
         </p>
         <p class="text">
-          My wish is, i have go there with my loving ones and With my 
+          My wish is i have go there with With my 
           Friends....❤️
         </p>
       </div>
