--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           <div>
             <img src="./switzright.png" alt="" />
             <h4>Switzerland</h4>
-            <h3>Amezing Location , To spend
-               Your Time With Your Family and Lifelines......
+            <h3>Amezing Location , To sped </h3>
+               <h3>  Your Time...
             </h3>
           </div>
         </div>
