--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
           <div>
             <img src="./switzright.png" alt="" />
             <h4>Switzerland</h4>
-            <h3>Amezing Location , To sped </h3>
-               <h3>  Your Time...
-            </h3>
+            <h3> "Nature is God" </h3>
+              
           </div>
         </div>
         <p class="text">
@@ -52,7 +51,7 @@
          
         </p>
         <p class="text">
-          My wish is i have go there with With my 
+          My wish i have go there with With my 
           Friends....❤️
         </p>
       </div>
