--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div>
             <img src="./switzleft.png" alt="" />
             <h4>Switzerland</h4>
-            <h3>Peace... </h3>
+            <h3>Peace.. </h3>
           </div>
           <div>
             <img src="./switzright.png" alt="" />
@@ -51,7 +51,7 @@
          
         </p>
         <p class="text">
-          My wish i have go there with With my 
+          My wish i have go there with my 
           Friends....❤️
         </p>
       </div>
